k8s/ingress/overlays/local/patch-gateway-host.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gateway-ingress
  namespace: apis
spec:
  rules:
    - host: localhost
      http:
        paths:
          - path: /backend
            pathType: Prefix
            backend:
              service:
                name: gateway
                port:
                  number: 8500
